--- a/public/locales/fr/french.json
+++ b/public/locales/fr/french.json
@@ -1,7 +1,14 @@
 {
-  "magazine": "MAGAZINE",
-  "countries": "PAYS",
-  "publications": "PUBLICATIONS",
-  "directory": "RÉPERTOIRE",
-  "news": "ACTUALITÉS"
+  "powered_by": "Propulsé par",
+  "and": "Et",
+  "pre_register_2026": "Préinscription 2026",
+  "your_browser_does_not_support_the_video_tag": "Votre navigateur ne prend pas en charge la balise vidéo.",
+  "contacts": "Contacts",
+  "services": "Services",
+  "about": "À propos",
+  "magazine": "Magazine",
+  "countries": "Pays",
+  "publications": "Publications",
+  "directory": "Annuaire",
+  "news": "Actualités"
 }
