--- a/public/locales/sp/spanish.json
+++ b/public/locales/sp/spanish.json
@@ -1,7 +1,14 @@
 {
-  "magazine": "REVISTA",
-  "countries": "PAÍSES",
-  "publications": "PUBLICACIONES",
-  "directory": "DIRECTORIO",
-  "news": "NOTICIAS"
+  "powered_by": "Impulsado por",
+  "and": "Y",
+  "pre_register_2026": "Preinscripción 2026",
+  "your_browser_does_not_support_the_video_tag": "Tu navegador no soporta la etiqueta de video.",
+  "contacts": "Contactos",
+  "services": "Servicios",
+  "about": "Acerca de",
+  "magazine": "Revista",
+  "countries": "Países",
+  "publications": "Publicaciones",
+  "directory": "Directorio",
+  "news": "Noticias"
 }
