--- a/src/assets/locales/en/english.json
+++ b/src/assets/locales/en/english.json
@@ -11,8 +11,8 @@
   "publications": "Publications",
   "directory": "Directory",
   "news": "News",
-  "what_is_ags_title": "What is AGS?",
-  "what_is_ags_description": "<strong>The Africa Gaming Summit (AGS)</strong> is the premier networking platform for the gaming industry across the African continent, bringing together a diverse community of game developers, publishers, distributors, platform providers, service and localization experts, payment solution providers, investors, government stakeholders, and retailers. AGS serves as a vital hub for exploring the evolving landscape of gaming in Africa, covering key areas such as online and mobile games, MMOs, social and console gaming, game design, business strategy, investment opportunities, education, and the virtual economy.<br /><br />In partnership with iGaming Afrika and MediaForce, the summit amplifies its impact by combining thought leadership, industry insights, and media outreach to connect global and regional players in a unified space. Together, they foster innovation, spotlight emerging markets, and promote sustainable growth across the African gaming ecosystem.",
+  "what_is_ags_title": "What is iGaming AFRIKA Summit?",
+  "what_is_ags_description": "<strong>IGaming AFRIKA Summit</strong> is Africa’s mega gaming event, designed to unite the entire gaming industry players across the world in one place—the stunning city of Nairobi. This being the inaugural edition of the summit, the event is seen to be the largest event in the industry, taking place in Naironi in 2026, the summit is seen to be the mother of all gaming conferences in Africa.The summit is taking place in an impressive 3,300m² square meters location at Sarit Center Expo, Nairobi’s Largest Expo center giving exhibitors and attendees a massive ground to showcase their products, meet and connect with industry players as we discuss the future of the gaming industry in Africa.",
   "years_in_business": "Years in business",
   "creating_success": "Creating the successful path",
   "projects_delivered": "Projects delivered",
