updated and improved components

--- a/client/src/assets/locales/en/english.json
+++ b/client/src/assets/locales/en/english.json
@@ -12,7 +12,7 @@
   "directory": "Directory",
   "news": "News",
   "what_is_ags_title": "What is iGaming AFRIKA Summit?",
-  "what_is_ags_description": "<strong>IGaming AFRIKA Summit</strong> is Africa’s mega gaming event, designed to unite the entire gaming industry players across the world in one place—the stunning city of Nairobi. This being the inaugural edition of the summit, the event is seen to be the largest event in the industry, taking place in Naironi in 2026, the summit is seen to be the mother of all gaming conferences in Africa.The summit is taking place in an impressive 3,300m² square meters location at Sarit Center Expo, Nairobi’s Largest Expo center giving exhibitors and attendees a massive ground to showcase their products, meet and connect with industry players as we discuss the future of the gaming industry in Africa.",
+  "what_is_ags_description": "<strong>IGaming AFRIKA Summit</strong> is Africa’s mega gaming event, designed to unite the entire gaming industry players across the world in one place—the stunning city of <strong>Nairobi, Kenya.</strong> This being the inaugural edition of the summit, the event is seen to be the largest event in the industry, taking place in Nairobi, in 2026, the summit is seen to be the mother of all gaming conferences in Africa. The summit is taking place in an impressive 3,300m² square meters location at <strong>Sarit Expo Center</strong>, Nairobi’s Largest Expo center giving exhibitors and attendees a massive ground to showcase their products, meet and connect with industry players as we discuss the future of the gaming industry in Africa.",
   "years_in_business": "Years in business",
   "creating_success": "Creating the successful path",
   "projects_delivered": "Projects delivered",
